--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
         <div class="skills-box">
           <div class="skills-info">
-            <<i class='bx bx-code'></i>
+            <i class='bx bx-code'></i>
             <h4>Dsa</h4>
             <p>Solid foundation in core data structures: arrays, linked lists, stacks, queues, and trees.
             </p>
@@ -173,7 +173,7 @@
 
         <div class="skills-box">
           <div class="skills-info">
-            <<i class='bx bxl-github'></i>
+            <i class='bx bxl-github'></i>
 
             <h4>Version Control Tools</h4>
             <p>Comfortable creating and managing repositories on GitHub for personal and team projects.
@@ -183,7 +183,7 @@
 
         <div class="skills-box">
           <div class="skills-info">
-            <<i class='bx bx-data'></i> <!-- Best for database/SQL -->
+            <i class='bx bx-data'></i> <!-- Best for database/SQL -->
 
             <h4>DBMS</h4>
             <p>Strong understanding of relational database concepts and normalization techniques
