--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <section class="about" id="about">
   <div class="about-img">
-    <img src="ss.png" alt="Siddh Patel">
+    <img src="bb.png" alt="Siddh Patel">
   </div>
   <div class="about-content">
     <h2>About <span>Me</span></h2>
