--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
     <script>
   var typed = new Typed('#typed', {
     strings: [
-      "a B.Tech 3rd Year Student",
+      "A B.Tech 3rd Year Student",
       "Fuelled by Curiosity",
       "",
       ""
