--- a/index.html
+++ b/index.html
@@ -291,6 +291,18 @@
           <div class="btn" onclick="window.open('https://sid-heree.github.io/amazon/', '_blank')">Review Project</div>
 
         </div>
+        <div class="projects-box">
+        <div class="projects-card">
+          <img src="project2.png" alt="">
+
+          <h3>Project 2</h3>
+
+          <p>
+            An interactive and visually striking digital clock built with HTML, CSS, and JavaScript, featuring glowing neon indicators and a frosted glass design.
+          </p>
+          <div class="btn" onclick="window.open('https://clock-rho-three.vercel.app/', '_blank')">Review Project</div>
+
+        </div>
 <!--
 
 
@@ -456,7 +468,7 @@
     <script>
   var typed = new Typed('#typed', {
     strings: [
-      "A B.Tech 3rd Year Student",
+      "a B.Tech 3rd Year Student",
       "Fuelled by Curiosity",
       "",
       ""
